--- a/index.html
+++ b/index.html
@@ -61,13 +61,19 @@
 						<div class="col-md-6">
 							<div class="header-search">
 								<form>
-									<select class="input-select">
-										<option value="0">All Categories</option>
-										<option value="1">Category 01</option>
-										<option value="1">Category 02</option>
-									</select>
-									<input class="input" placeholder="Search here">
-									<button class="search-btn">Search</button>
+									<input class="input" id="search-box"placeholder="Busque Aqui" onkeyup="buscarSugestoes()">
+									<button class="search-btn">Pesquisar</button>
+									<div id="suggestions" class="sugestoes"style="
+								    position: absolute;
+									background: white;
+									border: 1px solid #ccc;
+									width: 100%;
+									max-width: 300px;
+									z-index: 1000;
+									border-radius: 5px;
+									box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+									display: none;
+									"></div>
 								</form>
 							</div>
 						</div>
