--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="col-md-6">
 							<div class="header-search">
 								<form>
-									<input class="input" id="search-box"placeholder="Busque Aqui" onkeyup="buscarSugestoes()">
+									<input class="input" id="search-box" placeholder="Busque Aqui" onkeyup="buscarSugestoes()">
 									<button class="search-btn">Pesquisar</button>
 									<div id="suggestions" class="sugestoes"style="
 								    position: absolute;
@@ -72,7 +72,7 @@
 									z-index: 1000;
 									border-radius: 5px;
 									box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-									display: none;
+									visibility: hidden;
 									"></div>
 								</form>
 							</div>
